# chess_games_analysis

./: chess_analysis.ipynb  dashboard.py  main.py  pyproject.toml  requirements.txt  utils.py
chess_project/: README.md  requirements.txt
