[project]
name = "chess-project"
version = "0.1.0"
description = "Chess games analysis and visualization project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "streamlit>=1.28.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]
